# furl-cli

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
src/: engine.rs  lib.rs  main.rs
src/core/: cli.rs  config.rs  engine.rs  mod.rs
