[package]
name = "furl-cli"
description = "A fast, multithreaded CLI downloader built in Rust."
version = "0.1.0"
edition = "2024"
readme = "README.md"
license = "Apache-2.0"
authors = ["Sudip Ghimire"]
homepage = "https://github.com/ghimiresdp/furl-cli"
repository = "https://github.com/ghimiresdp/furl-cli"
keywords = ["downloader", "cli", "multithreaded", "http"]
categories = ["command-line-utilities", "network-programming"]


exclude = ["target/", "Cargo.lock", ".github/"]

[lib]
name = "furl_cli"
path = "src/lib.rs"


[[bin]]
name = "furl"
path = "src/main.rs"

[dependencies]
